tests/snapshots/snapshots__interpreter@fib.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fib.pr
---
55
=> ()
