tests/snapshots/snapshots__interpreter@fib_var.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fib_var.pr
---
0
1
5
55
6765
=> ()
