tests/snapshots/snapshots__interpreter@final_ctl.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/final_ctl.pr
---
20000
-60
32
110
42
=> ()
