tests/snapshots/snapshots__interpreter@fip.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fip.pr
---
14
22
=> ()
