tests/snapshots/snapshots__interpreter@fip_inplace.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fip_inplace.pr
---
10
63
12
=> ()
