tests/snapshots/snapshots__interpreter@fixed_ints.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fixed_ints.pr
---
-9223372036854775808
9223372036854775807
-9223372036854775808
-6446744073709551616
-9223372036854775808
0
18446744073709551615
0
18446744073709551615
922337203685477580
8
1
1
-9223372036854775808
9223372036854775808
18446744073709551615
5
9223372036854775806
1
1
36893488147419103232
340282366920938463463374607431768211456
6148914691236517205
=> ()
