tests/snapshots/snapshots__interpreter@flat_array.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/flat_array.pr
---
4
4
42
=> ()
