tests/snapshots/snapshots__interpreter@float_math.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/float_math.pr
---
0
0.479425538604203
0.8414709848078965
-0.8414709848078965
1
1.2246467991473532e-16
-0
-0.5063656411097588
9.999999983333334e-05
-0.7034419212632563
1
0.8775825618903728
0.5403023058681398
0.5403023058681398
6.123233995736766e-17
-1
1
0.8623188722876839
0.999999995
0.7107527442152148
0
0.5463024898437905
1.5574077246549023
-1.5574077246549023
1.633123935319537e+16
-1.2246467991473532e-16
-0
-0.5872139151569291
0.00010000000033333334
-0.9897139715443085
0
0.4636476090008061
0.7853981633974483
-0.7853981633974483
1.0038848218538872
1.2626272556789115
-0
1.5607966601082315
9.999999966666667e-05
1.5707153267943366
0
0.5210953054937474
1.1752011936438014
-1.1752011936438014
2.3012989023072947
11.548739357257748
-0
1.3440585709080678e+43
0.00010000000016666667
inf
1
1.1276259652063807
1.5430806348152437
1.5430806348152437
2.5091784786580567
11.591953275521519
1
1.3440585709080678e+43
1.000000005
inf
0
0.46211715726000974
0.7615941559557649
-0.7615941559557649
0.9171523356672744
0.99627207622075
-0
1
9.999999966666668e-05
1
1
1.6487212707001282
2.718281828459045
0.36787944117144233
4.810477380965351
23.140692632779267
1
2.6881171418161356e+43
1.0001000050001667
inf
1
1.4142135623730951
2
0.5
2.9706864235520194
8.824977827076287
1
1.2676506002282294e+30
1.0000693171203765
inf
0
0.6487212707001282
1.718281828459045
-0.6321205588285577
3.8104773809653514
22.140692632779267
-0
2.6881171418161356e+43
0.00010000500016667084
inf
0
0
1
-1
1
3
-0
100
0
12345
0
1
1
-1
2
4
-0
100
1
12346
0
1
1
-1
2
3
-0
100
0
12346
0
0
1
-1
1
3
-0
100
0
12345
0
0.5
1
1
1.5707963267948966
3.141592653589793
0
100
0.0001
12345.6789
0.5235987755982989
-0.5235987755982989
0
1.5707963267948966
-1.5707963267948966
1.0471975511965979
2.0943951023931957
1.5707963267948966
0
0
1.4142135623730951
1
1e+150
0.01
0
3
-2
1.2599210498948732
-0
0
1
2.302585092994046
-0.6931471805599453
4.605170185988092
0
10
-1
1.584962500721156
0
3
-0.3010299956639812
2
0
9.999500033330834e-05
0.6931471805599453
-0.6931471805599453
3
-4
4
-3
-3
3
9223372036854775807
-9223372036854775808
42
-7
1
1
81
0
56.25
56.25
1024
0.4636476090008061
-0.4636476090008061
0.6435011087932844
0
1.3101939350475558
-1.3101939350475558
0.19739555984988078
2.23606797749979
2.23606797749979
5
1
7.762087348130012
7.762087348130012
10.198039027185569
1
-1
3
0
1.5
-1.5
2
=> ()
