tests/snapshots/snapshots__interpreter@float_prec.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/float_prec.pr
---
1.500000000000000000000000000000000000000000000000000000000000
1.5000000000000000000000000000000000000000000000000000000000000
1.5000000000000000000000000000000000000000000000000000000000000
1.5000000000000000000000000000000000000000000000000000000000000
1048576.5000000000000000000000000000000000000000000000000000000
3.2500
=> ()
