tests/snapshots/snapshots__interpreter@fold.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fold.pr
---
28
5040
8
84
12345
=> ()
